<ScrollView android:id="@+id/ScrollView01" 
android:layout_width="fill_parent" 
android:layout_height="fill_parent" 
xmlns:android="http://schemas.android.com/apk/res/android"
 android:paddingBottom="10.0sp" 
 android:paddingLeft="10.0sp" 
 android:paddingTop="10.0sp" 
 android:background="@drawable/details_bg">
<TableLayout android:id="@+id/TableLayout01" 
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
 android:paddingRight="10.0sp"   
>
	<EditText android:id="@+id/etNewDrinkNm" 
		   android:layout_height="wrap_content" 
		   android:layout_width="fill_parent" 
		   android:text="@string/create_drink_title" 
		   android:textColor="#ccc"></EditText>
	<TableRow >	   
		<ImageView android:id="@+id/imgNewGlass" 
		android:layout_width="48.0px" 
		android:layout_height="48.0px" 
		android:layout_gravity="left"></ImageView>
		
		<TextView android:id="@+id/tvNewCategory" 
			   android:layout_width="wrap_content" 
			   android:layout_height="wrap_content" 
			   android:textColor="#000" 
			   android:textSize="18sp"
			   android:layout_gravity="center"></TextView>
	</TableRow>	   
	<Button android:id="@+id/btnNewCat"  
		   android:layout_height="wrap_content" 
		   android:layout_width="fill_parent" 
		   android:text="@string/categoryText"></Button>

		   <TextView android:id="@+id/tvNewIngredients" 
		   android:layout_width="wrap_content" 
		   android:layout_height="wrap_content" 
		   android:textColor="#000"
		   android:textSize="18sp"  android:height="0.0sp"></TextView> 
		   
	<Button android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/ingredientsText" 
			android:id="@+id/btnNewIng"></Button>
		   
	
		   
	<EditText android:id="@+id/etDirections" 
		   android:layout_width="wrap_content" 
		   android:layout_height="wrap_content"
		   android:textColor="#ccc" 
		   android:text="@string/instructionsText"></EditText>
		   
	<Button android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/save" 
			android:id="@+id/btnSave"></Button>

</TableLayout>
</ScrollView>
