<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:paddingBottom="10.0sp" android:paddingLeft="10.0sp" android:paddingTop="10.0sp" android:layout_gravity="bottom" android:background="@drawable/details_bg">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<Button android:layout_width="fill_parent" 
android:layout_height="wrap_content" 
android:layout_marginRight="10.0sp" 
android:layout_marginBottom="5.0sp" 
android:text="@string/liquorText" 
android:id="@+id/btnLiquor" android:background="@drawable/button_bg" android:paddingLeft="0sp" android:paddingRight="0sp" android:paddingTop="0sp" android:paddingBottom="10sp" android:textColor="#fff" android:textStyle="bold"></Button>
<Button android:layout_width="fill_parent" 
android:layout_height="wrap_content" 
android:layout_marginRight="10.0sp" 
android:layout_marginBottom="5.0sp" 
android:text="@string/mixersText" 
android:id="@+id/btnMixers" android:background="@drawable/button_bg" android:paddingLeft="0sp" android:paddingRight="0sp" android:paddingTop="0sp" android:paddingBottom="10sp" android:textColor="#fff" android:textStyle="bold"></Button>
<Button android:layout_width="fill_parent" 
android:layout_height="wrap_content" 
android:layout_marginRight="10.0sp" 
android:layout_gravity="bottom" 
android:text="@string/garnishText" 
android:id="@+id/btnGarnish" android:background="@drawable/button_bg" android:paddingLeft="0sp" android:paddingRight="0sp" android:paddingTop="0sp" android:paddingBottom="10sp" android:textColor="#fff" android:textStyle="bold"></Button>

</LinearLayout>
</ScrollView>