<ScrollView android:id="@+id/ScrollView01"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:paddingBottom="10.0sp" android:paddingLeft="10.0sp"
	android:paddingTop="10.0sp" android:background="@drawable/new_bg">
	<TableLayout android:id="@+id/TableLayout01"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:paddingRight="10.0sp">
		<EditText android:layout_height="wrap_content" android:textColor="#ccc"
			android:layout_width="fill_parent"
			android:layout_marginLeft="0.0sp" android:layout_marginTop="0sp" android:id="@+id/etNewGarnishNm" android:text="@string/newGarnishName"></EditText>
		
			
		<TableLayout android:id="@+id/lling" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginBottom="5sp">
		</TableLayout>

		
		<TableRow>

			<Button android:id="@+id/btnCancel" android:layout_height="wrap_content"
				android:text="@string/btnCancel" android:layout_width="fill_parent"
				android:background="@drawable/button_bg" android:height="20.0sp"
				android:layout_gravity="left" android:layout_weight="1"
				android:layout_marginRight="5.0sp" android:paddingLeft="0sp"
				android:paddingRight="0sp" android:paddingTop="0sp"
				android:textColor="#fff" android:textStyle="bold"
				android:paddingBottom="10sp"></Button>

			<Button android:layout_height="wrap_content" android:text="@string/btnSave"
				android:layout_width="fill_parent" android:id="@+id/btnSave"
				android:background="@drawable/button_bg" android:height="20.0sp"
				android:layout_gravity="right" android:layout_weight="1"
				android:paddingTop="0sp" android:textColor="#fff" android:textStyle="bold"
				android:paddingBottom="10sp" android:paddingLeft="10sp"
				android:paddingRight="10sp"></Button>

		</TableRow>


	</TableLayout>
</ScrollView>
